--- a/applications/application-kafka.yaml
+++ b/applications/application-kafka.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: bootstrap
+  name: kafka
   namespace: argocd
 spec:
   destination:
@@ -9,7 +9,7 @@ spec:
     server: 'https://kubernetes.default.svc'
   project: default
   source:
-    path: bootstrap
+    path: bootstrap/kafka
     repoURL: 'https://github.com/fanxwsam/asset-apps-argocd.git'
     targetRevision: master
   syncPolicy:
