--- a/bootstrap/kafka/kafka.yml
+++ b/bootstrap/kafka/kafka.yml
@@ -34,9 +34,9 @@ spec:
       containers:
         - env:
             - name: ALLOW_PLAINTEXT_LISTENER
-              value: "yes"
+              value: 'yes'
             - name: KAFKA_BROKER_ID
-              value: "1"
+              value: '1'
             - name: KAFKA_ZOOKEEPER_CONNECT
               #value: <ZOOKEEPER-INTERNAL-IP>:2181
               value: zookeeper-service:2181
@@ -45,7 +45,8 @@ spec:
             - name: KAFKA_ADVERTISED_LISTENERS
               value: PLAINTEXT://kafka-broker:9092
 
-          image: wurstmeister/kafka
+          # image: wurstmeister/kafka
+          image: bitnami//kafka
           imagePullPolicy: IfNotPresent
           name: kafka-broker
           ports:
