--- a/services/api-fraud/deployment.yml
+++ b/services/api-fraud/deployment.yml
@@ -12,6 +12,8 @@ spec:
       name: api-fraud
       labels:
         app: api-fraud
+      annotations:
+        linkerd.io/inject: enabled
     spec:
       containers:
         - name: api-fraud
