--- a/services/api-notifications/deployment.yml
+++ b/services/api-notifications/deployment.yml
@@ -12,6 +12,8 @@ spec:
       name: api-notifications
       labels:
         app: api-notifications
+      annotations:
+        linkerd.io/inject: enabled
     spec:
       containers:
         - name: api-notifications
