--- a/services/api-security/deployment.yml
+++ b/services/api-security/deployment.yml
@@ -12,6 +12,8 @@ spec:
       name: api-security
       labels:
         app: api-security
+      annotations:
+        linkerd.io/inject: enabled
     spec:
       containers:
         - name: api-security
