--- a/services/api-users/deployment.yml
+++ b/services/api-users/deployment.yml
@@ -15,6 +15,8 @@ spec:
     metadata:
       labels:
         app: api-users
+      annotations:
+        linkerd.io/inject: enabled
     spec:
       containers:
         - name: api-users
