--- a/services/apigw/01-ApiGW-Deployment.yml
+++ b/services/apigw/01-ApiGW-Deployment.yml
@@ -15,6 +15,8 @@ spec:
     metadata:
       labels:
         app: apigw
+      annotations:
+        linkerd.io/inject: enabled
     spec:
       containers:
         - name: apigw
